Add structure for nave and first part of landing page

--- a/index.html
+++ b/index.html
@@ -1,12 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Awesome Landing Page</title>
     <link rel="stylesheet" href="./style.css">
 </head>
+
 <body>
-    
+    <div class="container">
+        <header>
+            <p id="header-image">Header Logo</p>
+            <nav>
+                <ul>
+                    <li><a href="#" class="header-link">header link one</a></li>
+                    <li><a href="#" class="header-link">header link two</a></li>
+                    <li><a href="#" class="header-link">header link three</a></li>
+                </ul>
+            </nav>
+        </header>
+        <div class="bg-color1">
+            <div class="row">
+                <div class="col-6">
+                    <h1 id="main-text">This website is awesome</h1>
+                    <p>This website has some subtext that goes here under the main title.
+                        It's a smaller font and the color is lower
+                    </p>
+                    <button id="signup-button">Sign up</button>
+                </div>
+                <div class="col-6">
+                    <img src="..." alt="placeholder for image">
+                </div>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-12"><h2>Some Random Information</h2></div>
+        </div>
+    </div>
+
 </body>
+
 </html>
