Add content for landing page

--- a/index.html
+++ b/index.html
@@ -13,32 +13,70 @@
         <header>
             <p id="header-image">Header Logo</p>
             <nav>
-                <ul>
+                <menu>
                     <li><a href="#" class="header-link">header link one</a></li>
                     <li><a href="#" class="header-link">header link two</a></li>
                     <li><a href="#" class="header-link">header link three</a></li>
-                </ul>
+                </menu>
             </nav>
         </header>
         <div class="bg-color1">
             <div class="row">
-                <div class="col-6">
+                <div class="col-4">
                     <h1 id="main-text">This website is awesome</h1>
                     <p>This website has some subtext that goes here under the main title.
-                        It's a smaller font and the color is lower
+                        It's a smaller font and the color is lower contrast
                     </p>
                     <button id="signup-button">Sign up</button>
                 </div>
-                <div class="col-6">
-                    <img src="..." alt="placeholder for image">
+                <div class="col-8">
+                    <img src="..." alt="this is a placeholder for image">
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-12"><h2>Some Random Information</h2></div>
+            <div class="col-12">
+                <h2 id="second-text">Some Random Information</h2>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-offset-2"></div>
+            <div class="col-2">
+                <figure>
+                    <img src="" alt="#">
+                    <figcaption>This is some subtext under an illustration or an image</figcaption>
+                </figure>
+            </div>
+            <div class="col-2">
+                <figure>
+                    <img src="" alt="#">
+                    <figcaption>This is some subtext under an illustration or an image</figcaption>
+                </figure>
+            </div>
+            <div class="col-2">
+                <figure>
+                    <img src="" alt="#">
+                    <figcaption>This is some subtext under an illustration or an image</figcaption>
+                </figure>
+            </div>
+            <div class="col-2">
+                <figure>
+                    <img src="" alt="#">
+                    <figcaption>This is some subtext under an illustration or an image</figcaption>
+                </figure>
+            </div>
+        </div>
+        <div class="quotecontainer">
+            <blockquote>
+                <p class="quote">
+                    This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that it looks nice. 
+                </p>
+                <p id="author">
+                    Thor, God Of Thunder
+                </p>
+            </blockquote>
         </div>
     </div>
-
 </body>
 
 </html>
