--- a/index.html
+++ b/index.html
@@ -94,6 +94,9 @@
             </div>
         </div>
     </div>
+    <footer>
+        <p>Copyright &copy The Odin Project 2021</p>
+    </footer>
 </body>
 
 </html>
